--- a/task/src/main/webapp/WEB-INF/views/templates/core-tag.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/core-tag.html
@@ -11,3 +11,9 @@
 			</li>
 		</ul>
 	</div>
+	
+	<ul data-th-fragment="add-button" class="menu align-right">
+		<li>
+			<a class="button fi-plus" data-th-href="@{${url}(page=add)}"></a>
+		</li>
+	</ul>
