--- a/task/src/main/webapp/WEB-INF/views/fragments/users-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/users-fargment.html
@@ -25,7 +25,7 @@
 								<div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${user.username})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
 									<ul class="menu vertical">
     									<li><a data-th-href="@{edit/{id}(id=${user.username})}" data-th-text="#{buttonname.edit}" data-open="editRoom" data-th-attr="data-ajax-url='edit/?id='+${user.username}"></a></li>
-      									<li><a data-open="deleteRecord" data-th-attr="data-company-id=${user.username}" data-th-text="#{buttonname.delete}"></a></li>
+    									<li><a data-th-href="@{${url}(page=delete,username=${user.username})}" data-th-text="#{buttonname.delete}"></a></li>
       								</ul>
       				 			</div>
       				 		</li>
