--- a/task/src/main/webapp/WEB-INF/views/users/users.html
+++ b/task/src/main/webapp/WEB-INF/views/users/users.html
@@ -40,9 +40,15 @@
 				</div>
 				<!-- delete page -->
 				<div data-th-if="${#strings.toString(param.page)} == 'delete'">
-					<form data-th-action="@{${url}(page=delete)}" method="DELETE"  data-th-object="${user}">
+					<form data-th-action="@{${url}(page=delete)}" method="POST"  data-th-object="${user}">
 						<div class="medium-12 columns">
-							<h3 data-th-text="#{titleform.new}">new</h3>
+							<h3 data-th-text="#{titleform.deleteUser}">delete</h3>
+							<!-- name -->
+							<div class="medium-12 columns" >
+								<input type="hidden" id="username" name="username" data-th-field="*{username}" /> 
+							</div>
+							<span data-th-text="#{placeholder.userdell(${user.username})}"></span>
+							<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
 						</div>
 					</form>
 				</div>
