add edit appuser

--- a/task/src/main/webapp/WEB-INF/views/users/users-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/users/users-fargment.html
@@ -25,8 +25,8 @@
 								<div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${user.username})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
 									<ul class="menu vertical">
 										<li><a data-th-href="@{pass(username=${user.username})}" data-th-text="#{buttonname.changePass}">change pass</a></li>
-    									<li><a data-th-href="@{edit/{id}(id=${user.username})}" data-th-text="#{buttonname.edit}" data-open="editRoom" data-th-attr="data-ajax-url='edit/?id='+${user.username}"></a></li>
-    									<li><a data-th-href="@{${url}(page=delete,username=${user.username})}" data-th-text="#{buttonname.delete}">delete</a></li>
+    									<li><a data-th-href="@{edit(username=${user.username})}" data-th-text="#{buttonname.edit}">edit</a></li>
+    									<li><a data-th-href="@{del(username=${user.username})}" data-th-text="#{buttonname.delete}">delete</a></li>
       								</ul>
       				 			</div>
       				 		</li>
@@ -43,13 +43,22 @@
 			<div class="medium-12 columns">
 				<h3 data-th-text="#{titleform.new}">new</h3>
 			</div>
+			<!-- name -->
+			<div class="medium-12 columns" >
+				<label data-th-class="${#fields.hasErrors('username')}? 'is-invalid-label'" data-th-text="#{inputlabel.username}"></label> 
+				<input data-th-class="${#fields.hasErrors('username')}? 'is-invalid-input'" type="text" id="username" name="username" data-th-field="*{username}" data-th-placeholder="#{inputlabel.username}" autofocus="autofocus" /> 
+				<span class="form-error is-visible" data-th-errors="*{username}" ></span>
+			</div>
+			<div data-th-replace="users/users-fargment :: chenge-pass" data-th-remove="tag"></div>
 			<div data-th-replace="users/users-fargment :: core-form" data-th-remove="tag"></div>
 			<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>		
 		</form>
 	</div>
 	
-	<div data-th-fragment="form-delete" data-th-remove="tag">
-		<form data-th-action="@{user/del}" method="POST"  data-th-object="${userdel}">
+	<!-- delete form -->
+	<div data-th-fragment="form-del" data-th-remove="tag">
+		<form data-th-action="@{del}" method="POST"  data-th-object="${userdel}">
+		
 			<div class="medium-12 columns">
 				<h3 data-th-text="#{titleform.deleteUser}">delete</h3>
 			</div>
@@ -59,10 +68,10 @@
 			</div>
 			<span data-th-text="#{placeholder.userdell(${userdel.username})}"></span>
 			<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
-						
 		</form>
 	</div>
 	
+	<!-- form change password -->
 	<div data-th-fragment="form-pass" data-th-remove="tag">
 		<form data-th-action="@{pass}" method="POST"  data-th-object="${userChangePass}">
 			<div class="medium-12 columns">
@@ -71,21 +80,28 @@
 			<div class="medium-12 columns" >
 				<input type="hidden" id="username" name="username" data-th-field="*{username}" />
 			</div>
-			<div data-th-replace="users/users-fargment :: input-pass" data-th-remove="tag"></div>
+			<div data-th-replace="users/users-fargment :: chenge-pass" data-th-remove="tag"></div>
 			<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>					
 		</form>
 	</div>
 	
+	<!-- form edit user -->
+	<div data-th-fragment="form-edit" data-th-remove="tag">
+		<form data-th-action="@{edit}" method="post" data-th-object="${user}">
+			<div class="medium-12 columns">
+				<h3 data-th-text="#{titleform.edit}">title</h3>
+				<h3 data-th-text="*{username}" >username</h3>
+			</div>
+			<div>
+				<input type="hidden" id="username" name="username" data-th-field="*{username}" /> 
+			</div>
+			<div data-th-replace="users/users-fargment :: core-form" data-th-remove="tag"></div>
+			<div data-th-text="*{enabled}"></div>
+			<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
+		</form>
+	</div>
 	
 	<div data-th-fragment="core-form" data-th-remove="tag">
-			<!-- name -->
-			<div class="medium-12 columns" >
-				<label data-th-class="${#fields.hasErrors('username')}? 'is-invalid-label'" data-th-text="#{inputlabel.username}"></label> 
-				<input data-th-class="${#fields.hasErrors('username')}? 'is-invalid-input'" type="text" id="username" name="username" data-th-field="*{username}" data-th-placeholder="#{inputlabel.username}" autofocus="autofocus" /> 
-				<span class="form-error is-visible" data-th-errors="*{username}" ></span>
-			</div>
-			
-			<div data-th-replace="users/users-fargment :: input-pass" data-th-remove="tag"></div>
 			
 			<!-- role -->
 			<div class="medium-12 columns">
@@ -95,9 +111,19 @@
     			</label>
 			</div>
 			<!-- disable -->
-			<div class="medium-12 columns">
+			<div class="medium-12 small-12 columns">
 				<label data-th-text="#{inputlabel.isdisable}"></label>
-				<input type="checkbox" id="disable" data-th-field="*{enabled}">
+				<input type="checkbox" id="enabled" data-th-field="*{enabled}">
+			</div>
+	</div>
+		
+	<div data-th-fragment="chenge-pass" data-th-remove="tag">
+			<div data-th-replace="users/users-fargment :: input-pass" data-th-remove="tag"></div>
+			<!-- repeat password -->
+			<div class="medium-12 columns" >
+				<label data-th-class="${#fields.hasErrors('repeatPassword')}? 'is-invalid-label'" data-th-text="#{inputlabel.repeatPassword}"></label>
+				<input data-th-class="${#fields.hasErrors('repeatPassword')}? 'is-invalid-input'" type="password" id="repeatPassword" name="repeatPassword" data-th-value="*{repeatPassword}" data-th-placeholder="#{inputlabel.repeatPassword}" autofocus="autofocus">
+				<span class="form-error is-visible" data-th-errors="*{repeatPassword}" ></span>
 			</div>
 	</div>
 		
@@ -108,10 +134,5 @@
 				<input data-th-class="${#fields.hasErrors('password')}? 'is-invalid-input'" type="password" id="pass" name="password" data-th-value="*{password}" data-th-placeholder="#{inputlabel.password}" autocomplete="off">
 				<span class="form-error is-visible" data-th-errors="*{password}" ></span>
 			</div>
-			<!-- repeat password -->
-			<div class="medium-12 columns" >
-				<label data-th-class="${#fields.hasErrors('repeatPassword')}? 'is-invalid-label'" data-th-text="#{inputlabel.repeatPassword}"></label>
-				<input data-th-class="${#fields.hasErrors('repeatPassword')}? 'is-invalid-input'" type="password" id="repeatPassword" name="repeatPassword" data-th-value="*{repeatPassword}" data-th-placeholder="#{inputlabel.repeatPassword}" autofocus="autofocus">
-				<span class="form-error is-visible" data-th-errors="*{repeatPassword}" ></span>
-			</div>
+			
 	</div>	
