--- a/task/src/main/webapp/WEB-INF/views/templates/menu/logof-logon.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/menu/logof-logon.html
@@ -1,7 +1,7 @@
 
 <div class="columns shrink app-dashboard-top-bar-actions">
 	<div data-sec-authorize="!isAuthenticated()">
-		<a data-th-href="home" data-th-text="#{buttonname.login}" class="button hollow">Sing in</a>
+		<a data-th-href="home" data-th-text="#{buttonname.login}" class="button">Sing in</a>
 	</div>
 	<div data-sec-authorize="isAuthenticated()">
 		<form name="logonLogoff" data-th-action="@{/logout}" method="POST">
