--- a/task/src/main/webapp/WEB-INF/views/company/company.html
+++ b/task/src/main/webapp/WEB-INF/views/company/company.html
@@ -1,64 +1,38 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-	<head data-th-replace="templates/head :: head(#{titleform.company})">
-	</head>
-<body>
+<html>
+	<head data-th-replace="templates/head :: head(#{titleform.company})"></head>
+	
+	<body>
 
-<div class="app-dashboard shrink-medium">
-		<div class="row expanded app-dashboard-top-nav-bar">
-			<div class="columns medium-2">
-				<button data-toggle="app-dashboard-sidebar"
-					class="menu-icon hide-for-medium"></button>
-				<a class="app-dashboard-logo" th:text="#{titleform.company}"></a>
+	<div class="app-dashboard shrink-medium">
+			<div class="row expanded app-dashboard-top-nav-bar">
+				<div class="columns medium-2">
+					<button data-toggle="app-dashboard-sidebar"
+						class="menu-icon hide-for-medium"></button>
+					<a class="app-dashboard-logo" data-th-text="#{titleform.company}"></a>
+				</div>
+				<div class="columns show-for-medium"></div>
+				<div data-th-insert="templates/menu/logof-logon.html"></div>
 			</div>
-			<div class="columns show-for-medium">
-			
-			</div>
-			<div th:insert="templates/menu/logof-logon.html"></div>
-		</div>
-
-		<div class="app-dashboard-body off-canvas-wrapper">
-			<div id="app-dashboard-sidebar"	class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
-				<div class="app-dashboard-sidebar-inner">
-					<ul class="vertical menu">
-						<th:bloc data-th-replace="fragments/menu.html :: top-directories"></th:bloc>
-					</ul>
+	
+			<div class="app-dashboard-body off-canvas-wrapper">
+				<div id="app-dashboard-sidebar"	class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
+					<div class="app-dashboard-sidebar-inner">
+						<ul data-th-replace="fragments/menu :: top-directories"></ul>
+					</div>
+				</div>
+	
+				<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
+					<div data-th-replace="fragments/company-fargment :: table" data-th-remove="tag"></div>
 				</div>
 			</div>
-
-			<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
-				<div data-th-replace="fragments/company-fargment :: table"></div>
-			</div>
 		</div>
-	</div>
 	
-	<!-- modal window delete -->
-	<div class="reveal" data-th-id="deleteRecord" data-reveal data-options="closeOnClick:false; closeOnEsc:false;">
-		<div data-th-replace="fragments/company-fargment :: deleteModalWindow"></div>
-	</div>
+		<!-- modal window delete -->
+		<div class="reveal" data-th-id="deleteRecord" data-reveal data-options="closeOnClick:false; closeOnEsc:false;"></div>
 	
-	<div data-th-insert="templates/head :: script"></div>
-	
-	<script type="application/javascript" th:inline="javascript">
-		$(document).foundation();
-	</script>
-	
-	
-		<script type="application/javascript" th:inline="javascript">
-			var openModal = $('[data-open][data-company-id]').on('click',
-				function() {
-					var ajax_url = "selectedCompany/"	+ $(this).data('companyId');
-					var $modal = $('#deleteRecord');
-					if (ajax_url) {
-						$.ajax(ajax_url).done(function(modalBodyResponse) {
-							$modal.html(modalBodyResponse);
-						});
-					}
-			});
-				
-			//$('#deleteRoom').foundation('open');	
-		</script>
-</body>
+		<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
+
+		<script type="application/javascript" data-th-src="@{/resources/js/company.js}"></script>
+	</body>
 </html>
