--- a/task/src/main/webapp/WEB-INF/views/templates/core-tag.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/core-tag.html
@@ -17,3 +17,9 @@
 			<a class="button fi-plus" data-th-href="@{${url}(page=add)}"></a>
 		</li>
 	</ul>
+	
+	<div data-th-fragment="submit-buttpn-reval" class="small ">
+  		<ul class="menu align-right button-group">
+  			<li><button class="button"  data-close  data-th-text="#{buttonname.submit}" data-th-name="save">Submit</button></li>
+  		</ul>
+  	</div>
