--- a/task/src/main/webapp/WEB-INF/views/templates/menu/top-admin.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/menu/top-admin.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html 
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 		<div class="top-bar-left">
 			<ul class="menu">
-				<li><a th:href="@{/home}" th:text="#{titleform.home}">home</a></li>
-				<li><a th:href="@{/employee/}" th:text="#{titleform.emploee}"></a></li>
+				<li><a data-th-href="@{/home}" data-th-text="#{titleform.home}">home</a></li>
+				<li><a data-th-href="@{/employee/}" data-th-text="#{titleform.emploee}"></a></li>
 			</ul>
 		</div>
 		
-</html>
