--- a/task/src/main/webapp/WEB-INF/views/employee/employee-add.html
+++ b/task/src/main/webapp/WEB-INF/views/employee/employee-add.html
@@ -39,9 +39,9 @@
 
 	<div class="row">
 		<div class="column small-12 large-12">
-			<h1 th:text="#{titleform.new}">New employee</h1>
-			<form class="row" th:action="@{add}" method="post" th:object="${employee}">
-				<span class="column small-12 large-12" th:insert="templates/employee.html"></span>
+			<h1 data-th-text="#{titleform.new}">New employee</h1>
+			<form class="row" data-th-action="@{add}" method="post" data-th-object="${employee}">
+				<span class="column small-12 large-12" data-th-insert="templates/employee.html"></span>
 			</form>
 		</div>
 	</div>
