--- a/task/src/main/webapp/WEB-INF/views/login.html
+++ b/task/src/main/webapp/WEB-INF/views/login.html
@@ -10,20 +10,7 @@
 					<h3 style="text-align: center;">
 						<span data-th-text="#{titleform.login}"></span>
 					</h3>
-
-					<div class="medium-12 cell">
-						<label> <span data-th-text="#{inputlabel.username}"></span> <input
-							type="text" id="username" name="username" autofocus="autofocus" />
-						</label>
-					</div>
-					<div class="medium-12 cell">
-						<label> <span data-th-text="#{inputlabel.password}"></span> <input
-							type="password" id="password" name="password"
-							autofocus="autofocus" />
-						</label>
-					</div>
-					
-					<button class="button expanded" data-th-text="#{buttonname.login}"></button>
+					<div data-th-replace="fragments/login-fargment" data-th-remove="tag"></div>
 				</form>
 			</div>
 		</div>
