adding new scripts

--- a/task/src/main/webapp/WEB-INF/views/company/company.html
+++ b/task/src/main/webapp/WEB-INF/views/company/company.html
@@ -33,6 +33,6 @@
 	
 		<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
 
-		<script type="application/javascript" data-th-src="@{/resources/js/company.js}"></script>
+		<script type="module" data-th-src="@{/resources/js/company.js}"></script>
 	</body>
 </html>
