--- a/task/src/main/webapp/WEB-INF/views/company/company-edit.html
+++ b/task/src/main/webapp/WEB-INF/views/company/company-edit.html
@@ -44,14 +44,11 @@
 		</div>
 	</div>
 	
+	<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
+	
 	<script type="application/javascript" th:inline="javascript">
 		$(document).foundation();
 	</script>
 	
-	<div th:if="${deleteRoom}">
-		<script type="application/javascript" th:inline="javascript">
-			$('#deleteRoom').foundation('open');	
-		</script>
-	</div>
 </body>
 </html>
