--- a/task/src/main/webapp/WEB-INF/views/fragments/employee-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/employee-fargment.html
@@ -7,7 +7,7 @@
 						<td data-th-text="#{inputlabel.fullname}"></td>
 						<td data-th-text="#{inputlabel.company}"></td>
 						<td data-th-text="#{inputlabel.department}"></td>
-						<th data-sec-authorize="hasAuthority('ADMINISTRATOR')">
+						<th data-sec-authorize="hasAnyAuthority('ADMINISTRATOR','HR')">
 							<div data-th-replace="templates/core-tag :: button-add" data-th-remove="tag"></div>
 						</th>
 					</tr>
@@ -69,21 +69,21 @@
 			</div>
 			
 			<!-- login -->
-			<div data-th-class="${#fields.hasErrors('name')} ? 'medium-4 small-12 columns invalid' : 'medium-4  small-12 columns' ">
+			<div data-sec-authorize="hasAuthority('ADMINISTRATOR')" data-th-class="${#fields.hasErrors('name')} ? 'medium-4 small-12 columns invalid' : 'medium-4  small-12 columns' ">
 				<label data-th-text="#{inputlabel.login}">login</label> 
 				<input type="text" id="login" name="login" data-th-value="*{login}" autofocus="autofocus" />
 				<span class="form-error is-visible" data-th-errors="*{login}"></span>
 			</div>
 			
 			<!-- email -->
-			<div data-th-class="${#fields.hasErrors('name')} ? 'medium-4 small-12 columns invalid' : 'medium-4  small-12 columns' ">
+			<div data-sec-authorize="hasAuthority('ADMINISTRATOR')" data-th-class="${#fields.hasErrors('name')} ? 'medium-4 small-12 columns invalid' : 'medium-4  small-12 columns' ">
 				<label data-th-text="#{inputlabel.email}">email</label> 
 				<input type="text" id="email" name="email" data-th-value="*{email}" autofocus="autofocus" />
 				<span class="form-error is-visible" data-th-errors="*{email}"></span>
 			</div>
 			
 			<!-- password -->
-			<div data-th-class="${#fields.hasErrors('name')} ? 'medium-4 small-12 columns invalid' : 'medium-4  small-12 columns' ">
+			<div data-sec-authorize="hasAuthority('ADMINISTRATOR')" data-th-class="${#fields.hasErrors('name')} ? 'medium-4 small-12 columns invalid' : 'medium-4  small-12 columns' ">
 				<label data-th-text="#{inputlabel.password}">password</label> 
 				<input type="text" id="password" name="password" data-th-value="*{password}" autofocus="autofocus" />
 				<span class="form-error is-visible" data-th-errors="*{password}"></span>
@@ -114,7 +114,7 @@
 			</div>
 			
 			<!-- room -->
-			<div class="medium-6 small-12 columns">
+			<div data-sec-authorize="hasAuthority('ADMINISTRATOR')" class="medium-6 small-12 columns">
 				<label data-th-text="#{inputlabel.numberRoom}"></label>
 				<select id="numberRoom" data-th-field="*{idRoom}">
 					<option data-th-each="room : ${allRoom}" data-th-value="${room.id}" data-th-text="${room.numberRoom}">
@@ -122,7 +122,7 @@
 			</div>
 			
 			<!-- phone -->
-			<div class="medium-6 small-12  columns">
+			<div data-sec-authorize="hasAuthority('ADMINISTRATOR')" class="medium-6 small-12  columns">
 				<label data-th-text="#{inputlabel.numberPhone}"></label>
 				<select id="numberPhone" data-th-field="*{idPhone}">
 					<option data-th-each="phone : ${allPhone}" data-th-value="${phone.id}" data-th-text="${phone.number}">
@@ -138,7 +138,7 @@
 			<!-- button submit -->
 			<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
 	</div>
-	
+	m
 	<div data-th-fragment="deleteModalWindow" data-th-remove="tag">
 
 			<p></p>
