--- a/task/src/main/webapp/WEB-INF/views/fragments/position-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/position-fargment.html
@@ -6,7 +6,7 @@
 					<tr>
 						<th data-th-text="#{inputlabel.namePost}">name post</th>
 						<th data-th-text="#{inputlabel.heftPost}">heft post</th>
-						<th data-sec-authorize="hasAuthority('ADMINISTRATOR')">
+						<th data-sec-authorize="hasAnyAuthority('ADMINISTRATOR','HR')">
 							<div data-th-replace="templates/core-tag :: button-add" data-th-remove="tag"></div>
 						</th>
 					</tr>
