--- a/task/src/main/webapp/WEB-INF/views/hr/hr-order-fragmet.html
+++ b/task/src/main/webapp/WEB-INF/views/hr/hr-order-fragmet.html
@@ -1,5 +1,101 @@
 <!DOCTYPE html>
-<table data-th-fragment="hr-order-table">
-	<thead>
-	</thead>
-</table>
+
+<div data-th-fragmment="" >
+</div>
+
+<div data-th-fragment="hr-order-callout(hrOrderModel)"
+	class="callout secondary">
+	<div class="row expanded">
+		<div class="small-4 large-2 columns">
+			<h5>
+				<span>01.04.2022</span> № <span>8-к</span>
+			</h5>
+		</div>
+
+		<div class="small-12 large-9 columns">
+			<b>НАЗАВА:</b> <a href="#">Про організацію роботи в нічний час з
+				04 на 05 січня, з 05 на 06 січня 2022 року</a>
+		</div>
+		<div class="small-4 large-1 columns">
+			<a href="#" class="button">+</a> <a href="#" class="button">+</a>
+		</div>
+	</div>
+
+	<table class="stack">
+		<thead>
+			<tr>
+				<th>П.І.Б</th>
+				<th>ПОСАДА</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Діденко Вадим Леонідович</td>
+				<td>бригадир на дільницях основного виробництва відділу з
+					демонтажу</td>
+			</tr>
+			<tr>
+				<td>Панченко Василь Васильович</td>
+				<td>монтажник з монтажу сталевих та залізобетонних конструкцій
+					3 розряду відділу з демонтажу</td>
+			</tr>
+			<tr>
+				<td>Жиров Геннадій Леонідович</td>
+				<td>водій автотранспортних засобів (вантажних автомобілів)
+					відділу з демонтажу</td>
+			</tr>
+			<tr>
+				<td>Опанасюк Руслан Володимирович</td>
+				<td>машиніст крана відділу з демонтажу</td>
+			</tr>
+			<tr>
+				<td>Геращенко Олександр Миколайович</td>
+				<td>монтажник з монтажу сталевих та залізобетонних конструкцій
+					3 розряду відділу з демонтажу</td>
+			</tr>
+			<tr>
+				<td>Ошурко Дмитро Васильович</td>
+				<td>монтажник з монтажу сталевих та залізобетонних конструкцій
+					3 розряду відділу з демонтажу</td>
+			</tr>
+			<tr>
+				<td>Лисенко Олександр Володимирович</td>
+				<td>машиніст автовишки та автогідропідіймача відділу з
+					демонтажу</td>
+			</tr>
+			<tr>
+				<td>Швець Дмитро Олександрович</td>
+				<td>машиніст автовишки та автогідропідіймача відділу з
+					демонтажу</td>
+			</tr>
+			<tr>
+				<td>Майзус Віталій Юрійович</td>
+				<td>монтажник з монтажу сталевих та залізобетонних конструкцій
+					3 розряду відділу з демонтажу</td>
+			</tr>
+			<tr>
+				<td>Радикоп Анатолій Олександрович</td>
+				<td>водій автотранспортних засобів (вантажних автомобілів)
+					відділу з демонтажу</td>
+			</tr>
+			<tr>
+				<td>Андрійчик Олександр Олексійович</td>
+				<td>водій автотранспортних засобів (вантажопасажирських
+					автомобілів) відділу з демонтажу</td>
+			</tr>
+
+		</tbody>
+	</table>
+
+	<div class="row expanded">
+		<div class="small-12 large-4 columns">
+			<b>Опрацьовано бухгалтерія</b>
+		</div>
+		<div class="small-12 large-4 columns">
+			<b>№ реестрації заяви в журналі</b> <span></span>
+		</div>
+		<div class="small-12 large-4 columns">
+			<b>Примітки</b> <span></span>
+		</div>
+	</div>
+</div>
